# fsals

./: .gitattributes  .gitignore  README.md  main.py  make_figs.sh
python/custom/: main_custom.py
python/data/: main_data.py
python/figure/: configurations.py  main_figure.py
python/nu/: main_nu.py
python/utils/: geometry.py  log_helper.py  rust_adapter.py  storage.py  timestamps.py
python/utils/comparison_methods/: gu2005.py
rust/: .gitignore  Cargo.toml
rust/src/: main.rs  run_all.sh  types.rs
rust/src/data/: mod.rs
rust/src/data/line/: configurations.rs  mod.rs
rust/src/data/region/: configurations.rs  mod.rs
rust/src/nu/: configurations.rs  mod.rs
rust/src/systems/: distributed_delay1.rs  dopid1.rs  dopid2.rs  dopid3.rs  finite_rod.rs  ln_system1.rs  mod.rs  pde_complex_beta_sigma.rs  pde_complex_k_sigma.rs  pde_complex_tau_sigma.rs  retarded1.rs  retarded2.rs  semi_infinite_rod.rs  telegrapher_alpha_gamma.rs  telegrapher_standard.rs  telegrapher_x_k.rs  test_system.rs
rust/src/utils/: geometry.rs  mod.rs  optimization.rs  storage.rs
snapshots/data_snapshots/line/: distributed_delay1.data  finite_rod.data  pde_complex_beta_sigma.data  pde_complex_k_sigma.data  pde_complex_tau_sigma.data  pde_complex_tau_sigma_instructional.data  retarded1.data  semi_infinite_rod.data  telegrapher_alpha_gamma.data  telegrapher_standard.data  telegrapher_x_k.data
snapshots/data_snapshots/region/: distributed_delay1.data  finite_rod.data  pde_complex_beta_sigma.data  pde_complex_instructional.data  pde_complex_k_sigma.data  pde_complex_tau_sigma.data  (+6 more)
