[package]
name = "fsals"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.2", features = ["derive"] }
strum = "0.23.0"
log = "0.4.14"
simple_logger = "1.16.0"
num = "0.4.0"
lazy_static = "1.4.0"
iter_num_tools = "0.5.0"
serde = {version="1.0.133", features= ["derive"]}
serde_json = "1.0.59"